# ConverSync

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  backend_funcs.py  config.py  docker-compose.dev.yml  docker-compose.yml  docker-setup.bat  docker-setup.sh  example_usage.py  main.py  nginx.conf  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_email.py  test_all.py  test_email.py
api/: __init__.py  flask_app.py  meeting_assistant.py
config/: settings.py
frontend/: Dockerfile.dev  app.html  bot.html  index.html  package.json  tailwind.config.js  test.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  ChatMessage.tsx  FeatureSection.tsx  FloatingElements.tsx  HeroSection.tsx  MeetingModal.tsx  Navbar.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
outputs/: .gitkeep
services/: __init__.py  conversation_memory_service.py  email_service.py  media_converter.py  pdf_service.py  summarization_service.py  transcription_service.py  tts_service.py
temp/: .gitkeep
tests/: __init__.py  test_config.py  test_pdf_service.py
uploads/: .gitkeep
